<resources>
    <string name="app_name">Aula4_Sketches</string>
    <string name="sketches_title">Sketches</string>
    <string name="msg_color">Solid Color</string>
    <string name="msg_gallery">Gallery</string>
    <string name="msg_photo">Photo</string>
    <string name="msg_history">History</string>
    <string name="msg_soon">Avaiable soon...</string>
    <string name="ask_title">Title:</string>
    <string name="hint_title">Sketch title</string>
    <string name="ask_background_color">Background Color:</string>
    <string name="ask_red">R:</string>
    <string name="ask_green">G:</string>
    <string name="ask_blue">B:</string>
    <string name="msg_empty_title">You must give a title</string>
    <string name="str_no_name">No name</string>
    <string name="title_create">Create</string>
</resources>