<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/color_l1"
    android:orientation="vertical"
    tools:context=".ConfigColorActivity">
    <TextView
        android:textSize="20sp"
        android:textColor="@color/color_c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_title" />
    <EditText
        android:id="@+id/edTitle"
        android:maxLines="1"
        android:maxEms="30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:fontFamily="monospace"/>
    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_n1" >
        <TextView
            android:textSize="20sp"
            android:textColor="@color/color_c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_background_color" />
        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_red" />
            <SeekBar
                android:progress="75"
                android:id="@+id/seekRed"
                android:thumbTint="@color/red"
                android:progressTint="@color/red"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_green" />
            <SeekBar
                android:progress="25"
                android:id="@+id/seekGreen"
                android:thumbTint="@color/green"
                android:progressTint="@color/green"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_blue" />
            <SeekBar
                android:progress="50"
                android:id="@+id/seekBlue"
                android:thumbTint="@color/blue"
                android:progressTint="@color/blue"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
        <FrameLayout
            android:id="@+id/frPreview"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_c1" />
    </LinearLayout>
</LinearLayout>